# geometria_obliczeniowa

zad_1/: main.cpp  main.glade  main.gresource.xml  meson.build
zad_2/: main.cpp  main.glade  meson.build
